tests/manual/widgets/itemviews/itemviews.pro
@@ -1,2 +1,2 @@
 TEMPLATE = subdirs
-SUBDIRS = delegate qheaderview qtreeview qtreewidget
+SUBDIRS = delegate qheaderview qtreeview qtreewidget tableview-span-navigation
