tests/manual/widgets/itemviews/tableview-span-navigation/tableview-span-navigation.pro
@@ -1,0 +1,8 @@
+
+TEMPLATE = app
+TARGET = tableview-span-navigation
+INCLUDEPATH += .
+
+QT += widgets
+
+SOURCES += main.cpp
